--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "cn.jailedbird.barutils_app"
+        applicationId "cn.jailedbird.edgeutils_app"
         minSdk 21
         targetSdk 32
         versionCode 1
